Adding static analysis during build as part of Common xcconfig file
Fixing various static analysis warnings

--- a/Configurations/Common.xcconfig
+++ b/Configurations/Common.xcconfig
@@ -32,6 +32,9 @@ CLANG_ENABLE_MODULE_DEBUGGING = NO
 CLANG_ENABLE_OBJC_ARC = YES
 GCC_VERSION = com.apple.compilers.llvm.clang.1_0
 
+// Whether to run the static analyzer during builds
+RUN_CLANG_STATIC_ANALYZER = YES
+
 // Whether to strip out code that isn't called from anywhere
 DEAD_CODE_STRIPPING = NO
 
