--- a/Configurations/Analyzer.xcconfig
+++ b/Configurations/Analyzer.xcconfig
@@ -16,7 +16,7 @@
 // IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 // CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-#include "LogicTests.xcconfig"
+// Analyzer Flags
+CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES
+CLANG_ANALYZER_GCD_PERFORMANCE = YES
 
-// Testing
-TEST_HOST ="$(BUILT_PRODUCTS_DIR)/FBSDKTestHost.app/FBSDKTestHost"
