--- a/Configurations/Common.xcconfig
+++ b/Configurations/Common.xcconfig
@@ -16,6 +16,7 @@
 // IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 // CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
+#include "Analyzer.xcconfig"
 #include "Warnings.xcconfig"
 
 // Disable legacy-compatible header searching
