--- a/Configurations/Warnings.xcconfig
+++ b/Configurations/Warnings.xcconfig
@@ -18,12 +18,22 @@
 
 // Warnings
 CLANG_WARN__DUPLICATE_METHOD_MATCH = YES
+CLANG_WARN_BLOCK_CAPTURE_AUTORELEASING = YES
 CLANG_WARN_BOOL_CONVERSION = YES
+CLANG_WARN_COMMA = YES
 CLANG_WARN_CONSTANT_CONVERSION = YES
 CLANG_WARN_CXX0X_EXTENSIONS = NO
+CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
 CLANG_WARN_EMPTY_BODY = YES
 CLANG_WARN_ENUM_CONVERSION = YES
+CLANG_WARN_INFINITE_RECURSION = YES
 CLANG_WARN_INT_CONVERSION = YES
+CLANG_WARN_NON_LITERAL_NULL_CONVERSION = YES
+CLANG_WARN_OBJC_IMPLICIT_RETAIN_SELF = YES
+CLANG_WARN_OBJC_LITERAL_CONVERSION = YES
+CLANG_WARN_RANGE_LOOP_ANALYSIS = YES
+CLANG_WARN_STRICT_PROTOTYPES = YES
+CLANG_WARN_SUSPICIOUS_MOVE = YES
 CLANG_WARN_UNGUARDED_AVAILABILITY = YES_AGGRESSIVE
 CLANG_WARN_UNREACHABLE_CODE = YES
 CLANG_WARN_UNUSED_VARIABLE = YES
