--- a/Configurations/Common.xcconfig
+++ b/Configurations/Common.xcconfig
@@ -31,6 +31,7 @@ CLANG_ENABLE_MODULE_DEBUGGING = NO
 
 // Build Options
 CLANG_ENABLE_OBJC_ARC = YES
+CLANG_ENABLE_OBJC_WEAK = YES
 GCC_VERSION = com.apple.compilers.llvm.clang.1_0
 
 // Whether to run the static analyzer during builds
@@ -54,3 +55,6 @@ GCC_DYNAMIC_NO_PIC = NO
 GCC_INLINES_ARE_PRIVATE_EXTERN = YES
 GCC_NO_COMMON_BLOCKS = YES
 GCC_SYMBOLS_PRIVATE_EXTERN = NO
+
+// MTL
+MTL_FAST_MATH = YES
