--- a/Configurations/Configuration/Release.xcconfig
+++ b/Configurations/Configuration/Release.xcconfig
@@ -33,3 +33,6 @@ GCC_PREPROCESSOR_DEFINITIONS = $(inherited)
 
 // Swift Testability
 ENABLE_TESTABILITY = YES
+
+// MTL
+MTL_ENABLE_DEBUG_INFO = NO
