--- a/Configurations/Analyzer.xcconfig
+++ b/Configurations/Analyzer.xcconfig
@@ -19,4 +19,5 @@
 // Analyzer Flags
 CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED = YES
 CLANG_ANALYZER_GCD_PERFORMANCE = YES
-
+CLANG_ANALYZER_NONNULL = YES_AGGRESSIVE
+CLANG_ANALYZER_NUMBER_OBJECT_CONVERSION = YES_AGGRESSIVE
