--- a/FBSDKTVOSKit/Configurations/FBSDKTVOSKitTests.xcconfig
+++ b/FBSDKTVOSKit/Configurations/FBSDKTVOSKitTests.xcconfig
@@ -28,3 +28,6 @@ IPHONEOS_DEPLOYMENT_TARGET = 8.0
 
 HEADER_SEARCH_PATHS = $(inherited) $(BUILT_PRODUCTS_DIR)
 LIBRARY_SEARCH_PATHS = $(inherited) $(BUILT_PRODUCTS_DIR)
+
+// SDK Root
+SDKROOT = appletvos
