--- a/Configurations/Configuration/Release.xcconfig
+++ b/Configurations/Configuration/Release.xcconfig
@@ -36,3 +36,7 @@ ENABLE_TESTABILITY = YES
 
 // MTL
 MTL_ENABLE_DEBUG_INFO = NO
+
+// Catalyst : TODO - remove this when Travis CI supports MacOS 10.15
+SUPPORTS_MACCATALYST = NO
+SDKROOT = iphoneos
