--- a/FBSDKTVOSKit/Configurations/FBSDKTVOSKit-Dynamic.xcconfig
+++ b/FBSDKTVOSKit/Configurations/FBSDKTVOSKit-Dynamic.xcconfig
@@ -27,3 +27,6 @@ CURRENT_PROJECT_VERSION = $(FBSDK_PROJECT_VERSION)
 
 INFOPLIST_FILE = $(SRCROOT)/FBSDKTVOSKit/Info.plist
 MODULEMAP_FILE = $(SRCROOT)/FBSDKTVOSKit/FBSDKTVOSKit.modulemap
+
+// SDK Root
+SDKROOT = appletvos
