--- a/.travis.yml
+++ b/.travis.yml
@@ -34,13 +34,13 @@ jobs:
       name: Xcode - iOS 13
       osx_image: xcode11.4
       env:
-        - XCODE_SDK=iphonesimulator13.0
+        - XCODE_SDK=iphonesimulator13.4
         - XCODE_SCHEME=BuildAllKits
     - stage: test
       name: Xcode - tvOS 13
       osx_image: xcode11.4
       env:
-        - XCODE_SDK=appletvsimulator13.0
+        - XCODE_SDK=appletvsimulator13.4
         - XCODE_SCHEME=BuildAllKits_TV
     - stage: test
       name: Xcode - Release Config
@@ -72,21 +72,21 @@ jobs:
       name: Build Swift Packages
       osx_image: xcode11.4
       script: sh scripts/run.sh build spm
-    - stage: release
+    - stage: test
       name: GitHub Release
       osx_image: xcode11.4
       script: sh scripts/run.sh release github
-      deploy:
-        provider: releases
-        skip_cleanup: true
-        api_key: $GITHUB_ACCESS_TOKEN
-        file: build/Release/*
-        file_glob: true
-        name: Facebook SDK $TRAVIS_TAG
-        body: Consult Changelog $TRAVIS_TAG
-        on:
-          all_branches: true
-          tags: true
+      # deploy:
+      #   provider: releases
+      #   skip_cleanup: true
+      #   api_key: $GITHUB_ACCESS_TOKEN
+      #   file: build/Release/*
+      #   file_glob: true
+      #   name: Facebook SDK $TRAVIS_TAG
+      #   body: Consult Changelog $TRAVIS_TAG
+      #   on:
+      #     all_branches: true
+      #     tags: true
     - stage: release cocoapods 1/3
       name: Release Top Level Cocoapods
       osx_image: xcode11.4
