--- a/.travis.yml
+++ b/.travis.yml
@@ -73,9 +73,24 @@ jobs:
       osx_image: xcode11.4
       script: sh scripts/run.sh build spm
     - stage: test
-      name: GitHub Release
+      name: GitHub Release Dynamic
       osx_image: xcode11.4
-      script: sh scripts/run.sh release github
+      script: sh scripts/run.sh release github dynamic
+      # deploy:
+      #   provider: releases
+      #   skip_cleanup: true
+      #   api_key: $GITHUB_ACCESS_TOKEN
+      #   file: build/Release/*
+      #   file_glob: true
+      #   name: Facebook SDK $TRAVIS_TAG
+      #   body: Consult Changelog $TRAVIS_TAG
+      #   on:
+      #     all_branches: true
+      #     tags: true
+    - stage: test
+      name: GitHub Release Static
+      osx_image: xcode11.4
+      script: sh scripts/run.sh release github static
       # deploy:
       #   provider: releases
       #   skip_cleanup: true
