Updating cocoapods release steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,6 +142,7 @@ commands:
     steps:
       - attach_workspace:
           at: .
+      - run: pod repo update
       - run: sh scripts/run.sh release cocoapods FacebookSDK
 
   publish_base_cocoapods:
@@ -149,20 +150,22 @@ commands:
     steps:
       - attach_workspace:
           at: .
-      - run: sh scripts/run.sh release cocoapods FBSDKCoreKit
+      - run: pod trunk info FBSDKCoreKit
 
   publish_dependent_cocoapods:
     description: Pushes Login and Share to trunk
     steps:
       - attach_workspace:
           at: .
-      - run: sh scripts/run.sh release cocoapods FBSDKLoginKit FBSDKShareKit
+      - run: pod repo update
+      - run: pod trunk info FBSDKShareKit
 
   publish_top_level_cocoapods:
     description: Pushes GamingServices and tvOS to trunk
     steps:
       - attach_workspace:
           at: .
+      - run: pod repo update
       - run: sh scripts/run.sh release cocoapods FBSDKGamingServicesKit FBSDKTVOSKit
 
   publish_to_github:
