Add BITCODE_GENERATION_MODE = bitcode for iOS builds
Even though `-fembed-bitcode` is specified and the binaries have `__LLVM` segments for bitcode, Xcode fails when building an app with bitcode enabled.

Adding this option to iOS builds alongside the `-fembed-bitcode` flags eliminates this error and Xcode does not fail upon not finding bitcode in FBSDKLoginKit.framework.

--- a/Configurations/Platform/iOS.xcconfig
+++ b/Configurations/Platform/iOS.xcconfig
@@ -27,6 +27,7 @@ LD_RUNPATH_SEARCH_PATHS = $(inherited) @executable_path/Frameworks @loader_path/
 
 // Bitcode Support
 ENABLE_BITCODE = YES
+BITCODE_GENERATION_MODE = bitcode
 
 FB_BITCODE_FLAG = -fembed-bitcode
 OTHER_CFLAGS = $(inherited) $(FB_BITCODE_FLAG)
