--- a/Configurations/Version.xcconfig
+++ b/Configurations/Version.xcconfig
@@ -17,6 +17,6 @@
 // CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 // The versions for FBSDK and Messenger SDK.
-FBSDK_PROJECT_VERSION=11.0.1
+FBSDK_PROJECT_VERSION=11.0.2c
 MNSDK_PROJECT_VERSION=TODO_SUPPORT_MNSDK
 
