--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: Facebook Developer Support
     url: https://developers.facebook.com/support/
-    about: This issue tracker is not for support questsions and platform bugs. Please go to Facebook Developer Support for rasing these questions.
+    about: This issue tracker is not for support questions and platform bugs. Please go to Facebook Developer Support for rasing these questions.
